# openGLTry

./: CMakeLists.txt  Readme.md  main.cpp
GalacticObjects/: CMakeLists.txt  galacticDrawable.cpp  galacticDrawable.h  planet.cpp  planet.h  star.cpp  star.h
empire/: CMakeLists.txt  empire.cpp  empire.h
gameData/: empires.json  planets.json  starConnections.json  stars.json  textures.json
gameState/: CMakeLists.txt  gameState.cpp  gameState.h
globals/: CMakeLists.txt  displayMode.h  fonts.cpp  fonts.h  textures.cpp  textures.h
input/: CMakeLists.txt  mouseObj.cpp  mouseObj.h
staticFiles/gameData/: empires.json  starConnections.json  stars.json  textures.json
utils/: CMakeLists.txt  utils.cpp  utils.h
